[project]
name = "database-service"
description = "Shared database for flask apps"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "Timon Rieger", email = "work@timonrieger.de"}]
version = "1.2.0"
dependencies = [
    "flask_sqlalchemy",
    "SQLAlchemy",
    "Flask",
    "flask-migrate",
]